Allow Java to use experimental String handling