@@ -17,7 +17,7 @@ function restart_process {
     kill $pid
   fi
   echo "Trying to start process"
-  java -jar dist/d3ad.jar -c cfg/custom.json &
+  java --illegal-access=permit -jar dist/d3ad.jar -c cfg/custom.json &
 }
 
 # Restart process by default
